--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,7 @@
 @import "variables";
+@import "mixins";
+
+@include fancy-links;
 
 body {
   font-family: $text-font;
@@ -9,6 +12,10 @@ h1, h2, h3, h4 {
   font-family: $headline-font;
 }
 
+h2 {
+  @include large-text;
+}
+
 p {
   font-family: $text-font;
 }
@@ -17,11 +24,17 @@ a {
   color: $link-color;
 }
 
+.warning-button {
+  @include warning;
+  padding: 8px 12px;
+}
+
 #header {
+  @include box;
   height: $header-height;
   background-color: $theme-color;
   #main-menu {
-    li{
+    li {
       display: inline;
     }
 
