--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,8 @@
-@import "variables";
-@import "mixins";
+@import "partials/variables";
+@import "partials/mixins";
 
+@include google-font("Alegreya+Sans");
+@include google-font("Titillium+Web");
 @include fancy-links;
 
 body {
@@ -30,7 +32,8 @@ a {
 }
 
 #header {
-  @include box;
+  @include box($border: 1px solid #333);
+  @include box-shadow(2px 0px 4px #999, 1px 1px 6px $secondary-color);
   height: $header-height;
   background-color: $theme-color;
   #main-menu {
