--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,10 @@
 body {
   font-family: $text-font;
   color: $text-color;
+
+  @include large-screens {
+    font-size: 125%;
+  }
 }
 
 h1, h2, h3, h4 {
@@ -53,6 +57,10 @@ a {
 
 #main {
   width: $content-width;
+  @include large-screens {
+    width: auto;
+    max-width: $content-width;
+  }
   margin-left: auto;
   margin-right: auto;
 
