--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -30,6 +30,10 @@
 @mixin warning {
   background-color: orange;
   color: #ffffff;
+
+  &:hover {
+    background-color: lighten(orange, 10%);
+  }
 }
 
 @mixin box-shadow($shadows...) {
