--- a/scss/main.css
+++ b/scss/main.css
@@ -12,6 +12,13 @@ body {
     body {
       font-size: 125%; } }
 
+.error, .critical-error, .cta-button, .super-cta-button {
+  color: red; }
+
+.critical-error {
+  border-bottom: 1px solid red;
+  font-weight: bold; }
+
 h1, h2, h3, h4 {
   font-family: "Titillium Web", Georgia, serif; }
 
@@ -27,12 +34,27 @@ a {
   a:hover {
     color: #ca510d; }
 
-.warning-button {
+.sub-title {
+  font-style: italic; }
+
+.sub-title {
+  font-size: 1.25em; }
+
+.warning-button, .cta-button, .super-cta-button {
   background-color: orange;
   color: #ffffff;
   padding: 8px 12px; }
-  .warning-button:hover {
+  .warning-button:hover, .cta-button:hover, .super-cta-button:hover {
     background-color: #ffb733; }
+
+.cta-button, .super-cta-button {
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  font-weight: bold; }
+
+.super-cta-button {
+  font-size: 1.25em; }
 
 #header {
   -webkit-border-radius: 6px;
