End of section 12

--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,3 +1,11 @@
+//===Theme===
+//Allowed values: Dark, Light, Default
+$theme: Dark;
+
+//===Brands===
+//Allowed values: blue-beans, rogers-rovers, pastry-pizza
+$brand: rogers-rovers;
+
 //===colors===
 $text-color: #222222;
 $theme-color: #170a48;
@@ -5,6 +13,25 @@ $secondary-color: #f27731;
 $ternary-color: #ccf962;
 $link-color: $secondary-color;
 $menu-item-color: #ffffff;
+$body-background-color: #fff;
+
+@if $theme == Dark {
+  $text-color: #fff;
+  $theme-color: #42424a;
+  $secondary-color: #c24721;
+  $ternary-color: #698932;
+  $link-color: $secondary-color;
+  $menu-item-color: #ffffff;
+  $body-background-color: #22222a;
+} @else if ($theme == Light) {
+  $text-color: #000;
+  $theme-color: #372a27;
+  $secondary-color: #d26741;
+  $ternary-color: #b9da63;
+  $link-color: $secondary-color;
+  $menu-item-color: #ffffff;
+  $body-background-color: #fff;
+}
 
 //===fonts===
 $text-font: "Alegreya Sans", Arial, sans-serif;
@@ -15,3 +42,4 @@ $content-width: 960px;
 $header-height: 60px;
 $footer-height: 90px;
 $col: col-width($columns: 8);
+$col-5: col-width($columns: 5);
