--- a/scss/main.css
+++ b/scss/main.css
@@ -6,8 +6,9 @@ a {
 
 body {
   font-family: "Alegreya Sans", Arial, sans-serif;
-  color: #222222;
-  font-size: 1.125em; }
+  color: #fff;
+  font-size: 1.125em;
+  background-color: #22222a; }
   @media only screen and (max-width: 960px) {
     body {
       font-size: 125%; } }
@@ -30,9 +31,9 @@ p {
   font-family: "Alegreya Sans", Arial, sans-serif; }
 
 a {
-  color: #f27731; }
+  color: #c24721; }
   a:hover {
-    color: #ca510d; }
+    color: #812f16; }
 
 .sub-title {
   font-style: italic; }
@@ -61,11 +62,11 @@ a {
   -moz-border-radius: 6px;
   border-radius: 6px;
   border: 1px solid #333;
-  -webkit-box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731;
-  -moz-box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731;
-  box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731;
+  -webkit-box-shadow: 2px 0px 4px #999, 1px 1px 6px #c24721;
+  -moz-box-shadow: 2px 0px 4px #999, 1px 1px 6px #c24721;
+  box-shadow: 2px 0px 4px #999, 1px 1px 6px #c24721;
   height: 60px;
-  background-color: #170a48; }
+  background-color: #42424a; }
   #header #main-menu li {
     display: inline; }
   #header #main-menu a {
@@ -99,7 +100,9 @@ a {
         background-color: #efefef; }
 
 #footer {
+  clear: both;
   height: 90px;
-  background-color: #ccf962; }
+  background-color: #698932;
+  border-top: 5px solid #3e511e; }
 
 /*# sourceMappingURL=main.css.map */
