--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@ body {
   font-family: $text-font;
   color: $text-color;
   font-size: em(18px);
+  background-color: $body-background-color;
 
   @include large-screens {
     font-size: 125%;
@@ -41,6 +42,10 @@ p {
 
 a {
   color: $link-color;
+
+  @include blue-beans {
+    color: #8779ff;
+  }
 
   &:hover {
     color: darken($link-color, 15%);
@@ -132,6 +137,12 @@ a {
 }
 
 #footer {
+  clear: both;
   height: $footer-height;
   background-color: $ternary-color;
+
+  @include rogers-rovers {
+    border-top: 5px solid darken($ternary-color, 15%);
+  }
+
 }
