--- a/scss/main.css
+++ b/scss/main.css
@@ -18,6 +18,39 @@
 .col-6 {
   width: 12em; }
 
+.bob-banker-profile {
+  background-image: url("img/bob-banker.png"); }
+
+.patty-plume-profile {
+  background-image: url("img/patty-plume.png"); }
+
+.sandra-smith-profile {
+  background-image: url("img/sandra-smith.png"); }
+
+.tiny {
+  font-size: 8px; }
+
+.small {
+  font-size: 11px; }
+
+.medium {
+  font-size: 13px; }
+
+.large {
+  font-size: 18px; }
+
+.picture-2 {
+  width: 20%; }
+
+.picture-4 {
+  width: 40%; }
+
+.picture-6 {
+  width: 60%; }
+
+.picture-8 {
+  width: 80%; }
+
 a {
   font-style: italic;
   text-decoration: none; }
